Bug 189108 - task scheduler fails to read existing task parameters
Summary: task scheduler fails to read existing task parameters
Status: RESOLVED FIXED
Alias: None
Product: kcron
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Gary Meyer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-08 10:34 UTC by Vadym Krevs
Modified: 2010-10-20 13:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vadym Krevs 2009-04-08 10:34:27 UTC
Version:           unknown (using 4.2.2 (KDE 4.2.2) "release 111", KDE:KDE4:Factory:Desktop / openSUSE_11.1)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.27.20-1-debug

Open System Settings->Advanced->Task Scheduler and create a new task to run a cron job every day at 4:00AM by ticking "Run every day". Save the task. Then quit System Settings.

Then reopen System Settings->Advanced->Task Scheduler and attempt to modify the task. When the "Add or modify a scheduled task" dialog opens, none of the time-related task parameters are enabled. "Run every day" is not ticked, "4" is not selected in "AM" "Hours", etc

If you go ahead and modify the task and save its details, then a duplicate comment "DO NOT EXIT THIS FILE ..." is added at the beginning of the cron script.
Comment 2 Christoph Feck 2010-10-20 13:23:49 UTC
SVN commit 1187742 by cfeck:

Apply initial values

BUG: 189108


 M  +1 -1      ctunit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187742