Apply initial values

BUG: 189108

svn path=/trunk/KDE/kdeadmin/kcron/; revision=1187742